[tool.poetry]
name = "imagebind"
version = "0.1.0"
description = ""
authors = ["adwaver <adwaver4157@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.0.1"
pytorchvideo = {git = "https://github.com/facebookresearch/pytorchvideo.git", rev = "28fe037d212663c6a24f373b94cc5d478c8c1a1d"}
torchaudio = "^2.0.2"
torchvision = "^0.15.2"
ftfy = "^6.1.1"
regex = "^2023.6.3"
timm = "^0.9.2"
einops = "^0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
